log/build_2024-12-18_15-49-02/rc/stdout_stderr.log
running egg_info
writing ../../build/rc/rc.egg-info/PKG-INFO
writing dependency_links to ../../build/rc/rc.egg-info/dependency_links.txt
writing entry points to ../../build/rc/rc.egg-info/entry_points.txt
writing requirements to ../../build/rc/rc.egg-info/requires.txt
writing top-level names to ../../build/rc/rc.egg-info/top_level.txt
reading manifest file '../../build/rc/rc.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/rc/rc.egg-info/SOURCES.txt'
running build
running build_py
copying rc/rc_control.py -> /home/aimaim/rc_ws/build/rc/build/lib/rc
running install
running install_lib
copying /home/aimaim/rc_ws/build/rc/build/lib/rc/rc_control.py -> /home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc
byte-compiling /home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc/rc_control.py to rc_control.cpython-310.pyc
  File "/home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc/rc_control.py", line 4
    import rc_pwm_pkg.msg import PubPwm
                          ^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/rc/rc.egg-info to /home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc-0.0.0-py3.10.egg-info
running install_scripts
Installing listener script to /home/aimaim/rc_ws/install/rc/lib/rc
writing list of installed files to '/home/aimaim/rc_ws/build/rc/install.log'
